<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2017  Ashutosh Gangwar
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <android.support.v7.preference.PreferenceCategory android:title="@string/appearance">

    <android.support.v7.preference.ListPreference
      android:defaultValue="10"
      android:entries="@array/pref_dot_size"
      android:entryValues="@array/pref_dot_size_values"
      android:key="dot_size"
      android:title="@string/dot_size" />

    <com.github.ashutoshgngwr.tenbitclockwidget.ColorPickerPreference
      android:defaultValue="#FF0F0F0F"
      android:key="am_color"
      android:summary="@string/summary_am_time_color"
      android:title="@string/am_time_color" />

    <com.github.ashutoshgngwr.tenbitclockwidget.ColorPickerPreference
      android:defaultValue="#FFFCFCFC"
      android:key="pm_color"
      android:summary="@string/summary_pm_time_color"
      android:title="@string/pm_time_color" />

    <com.github.ashutoshgngwr.tenbitclockwidget.ColorPickerPreference
      alphaSlider="true"
      android:defaultValue="#00000000"
      android:key="background_color"
      android:title="@string/clock_background_color" />

    <android.support.v7.preference.CheckBoxPreference
      android:defaultValue="true"
      android:key="display_separator"
      android:summary="@string/summary_display_separator"
      android:title="@string/display_separator" />

  </android.support.v7.preference.PreferenceCategory>

  <android.support.v7.preference.PreferenceCategory android:title="@string/extras">

    <android.support.v7.preference.Preference
      android:key="help"
      android:title="@string/help" />

    <android.support.v7.preference.Preference
      android:key="about"
      android:title="@string/about" />

  </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
